# AI

./: .gitattributes  README.md  pyproject.toml  validate_module.py
action_goto_documents_mixin/: __manifest__.py
base_code_list/: __manifest__.py
base_display_name/: README.rst  __manifest__.py  hooks.py
base_fiq/: __manifest__.py
base_mixin_display_name/: __manifest__.py
base_mixin_expression_value/: __manifest__.py
base_mixin_sequence_number/: README.rst  __manifest__.py
base_model_code/: __manifest__.py
crm_code_list/: __manifest__.py
crm_documents_tag/: __manifest__.py
crm_fiq/: __manifest__.py
crm_lead_firstname/: README.rst  __manifest__.py
crm_name/: __manifest__.py  hooks.py
crm_partner_assign_location/: __manifest__.py
crm_sale_project/: __manifest__.py  hooks.py
crm_sequence_number/: __init__.py  __manifest__.py  hooks.py
custom_info_mixin/: __manifest__.py
documents_code/: README.rst  __manifest__.py  hooks.py
documents_code_list/: __manifest__.py
documents_color/: __manifest__.py
documents_fiq/: __manifest__.py
documents_form/: __manifest__.py
documents_name/: __init__.py  __manifest__.py
documents_tag/: __init__.py  __manifest__.py
documents_url/: __manifest__.py
fiq_ai/: __manifest__.py
fiq_ai_claude/: __init__.py  __manifest__.py
fiq_ai_rolle/: __manifest__.py
fiq_befaring/: __manifest__.py
fiq_custom/: __manifest__.py
fiq_dokument_sp_id/: __manifest__.py
fiq_gui_ai/: __manifest__.py
fiq_gui_ai_kr/: __init__.py  __manifest__.py
fiq_gui_comm/: __manifest__.py
fiq_gui_control/: __manifest__.py  pyproject.toml
fiq_gui_crm/: __manifest__.py
fiq_gui_crm_leads/: __manifest__.py
fiq_gui_crm_so/: __manifest__.py
fiq_gui_epost/: __manifest__.py
fiq_gui_fin/: __manifest__.py
fiq_gui_gantt/: __manifest__.py
fiq_gui_hoved/: __manifest__.py
fiq_gui_pos/: __manifest__.py
fiq_gui_prj/: __manifest__.py
fiq_gui_relations/: __manifest__.py
fiq_gui_rgs/: __manifest__.py
fiq_gui_shell/: __manifest__.py  pyproject.toml
fiq_hovedmeny/: __manifest__.py
fiq_komm_ruting/: __manifest__.py
fiq_mgmtsystem/: __manifest__.py
fiq_modules/: __manifest__.py
fiq_multi_company/: README.rst  __init__.py  __manifest__.py
fiq_partner_relasjon/: __manifest__.py
fiq_rgs_lonn/: __init__.py  __manifest__.py
fiq_sjekkliste/: __manifest__.py
fiq_tilgang/: __manifest__.py
gdpr_platform/: __init__.py  __manifest__.py
l10n_no_saft_import/: __manifest__.py
mail_activity_dashboard/: __manifest__.py
mail_chat/: __manifest__.py  hooks.py
mail_config_by_user/: __manifest__.py
mail_fiq/: __manifest__.py
mail_force_email_notification_compose/: __manifest__.py
mail_layout_preview/: __manifest__.py
mail_message_search_global/: __manifest__.py
mail_message_security/: README.rst  __manifest__.py
mail_never_autofollow/: __manifest__.py
mail_notification_with_history/: __manifest__.py
mail_show_follower/: __manifest__.py
partner_assign_location/: __manifest__.py
partner_code_list/: __manifest__.py
partner_documents_folder/: __manifest__.py
partner_documents_tag/: __manifest__.py
partner_sequence_number/: __manifest__.py  hooks.py
partner_short_name/: README.rst  __manifest__.py
portal_user/: README.rst  __manifest__.py
product_attribute_keep_variant/: README.rst  __manifest__.py
product_bundle_enterprise/: __manifest__.py
product_documents_folder/: __manifest__.py
product_documents_tag/: __manifest__.py
product_fiq/: __manifest__.py
product_sequence_number/: __manifest__.py  (+1 more)
(+756 files in other folders)
